fjernet deprecated